fixed text-overflow

--- a/src/App.css
+++ b/src/App.css
@@ -53,7 +53,6 @@
   background-size: cover;
   height: 200px;
   width: 120px;
-  margin-right: 30px;
 }
 
 .App-link {
@@ -69,7 +68,9 @@
 
 
 .user-deck{
-  margin-bottom: -100px;
+  margin-bottom: -150px;
+    margin-right: 30px;
+
 }
 .main-menu-wrapper{
    margin: 0;
@@ -122,6 +123,7 @@
 }
 
 .card-image{
+    border: 5px solid black;
   height: 100%;
   width: 100%; 
 }
@@ -161,10 +163,20 @@
 }
 
 .baseball-card-full-stats{
-  transition: transform 0.4s;
+  overflow-y: auto;
+ height: 300px;
+  width: 150px;  transition: transform 0.4s;
   transform-style: preserve-3d;
+  border: solid black 5px;
+  text-size-adjust: small;
+   text-overflow: ellipsis;
+  background-color: bisque;
 }
 
+.stats{
+  font-size: 20px;
+  display: grid;
+}
 .coming-soon-text{
   animation: regularFadeIn 2s;
 }
@@ -206,6 +218,17 @@
 
 @media (max-width: 767px) { 
 
+
+.baseball-card-full-stats{
+  overflow-y: auto;
+ height: 300px;
+  width: 130px;  transition: transform 0.4s;
+  transform-style: preserve-3d;
+  border: solid black 5px;
+  text-size-adjust: small;
+   text-overflow: ellipsis;
+  background-color: bisque;
+}
   .loading{
   position: absolute;
   top: 25%;
@@ -218,7 +241,7 @@
 }
 
 .deal-card-wrapper{
-  position: absolute;
+  /* position: absolute; */
   left: 20%;
   top: 50%;
   height: 60px;
@@ -226,6 +249,7 @@
   font-weight: bold;
 }
 .user-player-card{
+  /* border: 5px solid black; */
 top: -150px;
  height: '10rem';
   width: '8rem';
@@ -237,7 +261,6 @@ animation: mobileCardSlide 2s forwards;
   width: '8rem';
   animation: mobileCardSlide2 2s forwards;
 }
-
 
 
 .feedback-text-win {
@@ -257,5 +280,18 @@ animation: mobileCardSlide 2s forwards;
   animation-fill-mode: forwards;
 }
 
+.deal-card-button {
+  font-size: 50px;
+  flex: 1;
+  font-weight: bold;
+}
 
+.deal-card-wrapper{
+  position: absolute;
+  left: 40%;
+  top: 25%;
+  height: 50px;
+  width: 200px;
+  font-weight: bold;
+}
 }
